--- a/app/src/main/res/layout/activity_splash__screen.xml
+++ b/app/src/main/res/layout/activity_splash__screen.xml
@@ -7,6 +7,35 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.kaleb.truestrength.Splash_Screen">
+    tools:context="com.example.kaleb.truestrength.Splash_Screen"
+    android:background="#000000">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:id="@+id/logo"
+        android:src="@drawable/truestrengthlogo"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:id="@+id/disclaimerText"
+        android:text="Before beginning any exercise or nutrition programme consult your healthcare professional or physician to avoid the potential harm of doing any inappropriate exercises or nutrition which may affect your health."
+        android:textColor="#FFFFFF"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="SAFETY DISCLAIMER"
+        android:id="@+id/disclaimerHeading"
+        android:layout_above="@+id/disclaimerText"
+        android:layout_centerHorizontal="true"
+        android:textColor="#FFFFFF" />
 </RelativeLayout>
