--- a/app/src/main/res/layout/activity_splash__screen.xml
+++ b/app/src/main/res/layout/activity_splash__screen.xml
@@ -10,14 +10,33 @@
     tools:context="com.example.kaleb.truestrength.Splash_Screen"
     android:background="#000000">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="SAFETY DISCLAIMER"
+        android:id="@+id/disclaimerHeading"
+        android:textColor="#FFFFFF"
+        android:layout_above="@+id/disclaimerText"
+        android:layout_centerHorizontal="true" />
+
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="350dp"
         android:id="@+id/logo"
         android:src="@drawable/truestrengthlogo"
+        android:layout_height="300dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="I agree"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/disclaimerButton"
+        android:onClick="buttonClicked"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -26,16 +45,7 @@
         android:id="@+id/disclaimerText"
         android:text="Before beginning any exercise or nutrition programme consult your healthcare professional or physician to avoid the potential harm of doing any inappropriate exercises or nutrition which may affect your health."
         android:textColor="#FFFFFF"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="SAFETY DISCLAIMER"
-        android:id="@+id/disclaimerHeading"
-        android:layout_above="@+id/disclaimerText"
-        android:layout_centerHorizontal="true"
-        android:textColor="#FFFFFF" />
+        android:layout_above="@+id/disclaimerButton"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
