--- a/app/src/main/res/layout/activity_profile_screen.xml
+++ b/app/src/main/res/layout/activity_profile_screen.xml
@@ -1,82 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_profile_screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#000000"
-    tools:context="com.example.kaleb.truestrength.ProfileScreen">
+    tools:context="com.example.kaleb.truestrength.ProfileScreen"
+    android:background="#000000">
 
-    <TableLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:contextClickable="false"
-        android:id="@+id/menuTable"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TableRow
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            >
+            android:id="@+id/table">
 
-            <Button
+            <TableLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:contextClickable="false"
+                android:id="@+id/menuTable"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true">
+
+                <TableRow
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    >
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Extra"
+                        android:id="@+id/extraButton"
+                        android:layout_column="0"
+                        android:layout_weight="0.5"
+                        android:textColor="#eeff00"
+                        android:background="@drawable/yellowborder"
+                        android:layout_gravity="center" />
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="My   Profile"
+                        android:id="@+id/myprofileButton"
+                        android:layout_column="1"
+                        android:layout_weight="0.25"
+                        android:background="#eeff00"
+                        android:textColor="#000000"
+                        android:layout_gravity="center" />
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="My Exercise"
+                        android:id="@+id/myexerciseButton"
+                        android:layout_column="2"
+                        android:layout_weight="0.25"
+                        android:textColor="#eeff00"
+                        android:background="@drawable/yellowborder"
+                        android:layout_gravity="center"
+                        android:onClick="myExerciseClicked" />
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="True Strength"
+                        android:id="@+id/truestrengthButton"
+                        android:layout_column="3"
+                        android:layout_weight="0.25"
+                        android:textColor="#eeff00"
+                        android:background="@drawable/yellowborder"
+                        android:layout_gravity="center"
+                        android:onClick="trueStrengthClicked" />
+                </TableRow>
+            </TableLayout>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="365dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
+            android:background="@drawable/whiteborder">
+
+
+            <TextView
+                android:text="Name: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Extra"
-                android:id="@+id/extraButton"
-                android:layout_column="0"
-                android:layout_weight="0.5"
-                android:textColor="#eeff00"
-                android:background="@drawable/yellowborder"
-                android:layout_gravity="center" />
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="30dp"
+                android:id="@+id/name"
+                android:textColor="#ffffff"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
 
-            <Button
+            <TextView
+                android:text="DOB: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="My    Profile"
-                android:id="@+id/myprofileButton"
-                android:layout_column="1"
-                android:layout_weight="0.25"
-                android:background="@drawable/yellowborder"
-                android:textColor="#eeff00"
-                android:layout_gravity="center" />
+                android:layout_marginTop="31dp"
+                android:id="@+id/dob"
+                android:textColor="#ffffff"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:layout_below="@+id/name"
+                android:layout_alignStart="@+id/name" />
 
-            <Button
+            <TextView
+                android:text="Height: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="My Exercise"
-                android:id="@+id/myexerciseButton"
-                android:layout_column="2"
-                android:layout_weight="0.25"
-                android:textColor="#000000"
-                android:background="#eeff00"
-                android:layout_gravity="center" />
+                android:id="@+id/height"
+                android:textColor="#ffffff"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:layout_below="@+id/dob"
+                android:layout_alignStart="@+id/gender"
+                android:layout_marginTop="69dp" />
 
-            <Button
+            <TextView
+                android:text="Gender: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="True Strength"
-                android:id="@+id/truestrengthButton"
-                android:layout_column="3"
-                android:layout_weight="0.25"
-                android:textColor="#eeff00"
-                android:background="@drawable/yellowborder"
-                android:layout_gravity="center" />
-        </TableRow>
+                android:id="@+id/gender"
+                android:textColor="#ffffff"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:layout_below="@+id/dob"
+                android:layout_alignStart="@+id/dob"
+                android:layout_marginTop="19dp" />
 
-    </TableLayout>
+            <TextView
+                android:text="Weight: "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="28dp"
+                android:id="@+id/weight"
+                android:textColor="#ffffff"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                android:layout_below="@+id/height"
+                android:layout_alignStart="@+id/height" />
+        </RelativeLayout>
 
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/textView"
-        tools:text="Does this work?" />
-</RelativeLayout>
+    </LinearLayout>
+</ScrollView>
