--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -16,4 +16,49 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:id="@+id/testText" />
+
+    <TextView
+        android:text="name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/testText"
+        android:layout_toEndOf="@+id/testText"
+        android:layout_marginStart="21dp"
+        android:id="@+id/name" />
+
+    <TextView
+        android:text="dob"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/name"
+        android:layout_alignStart="@+id/name"
+        android:layout_marginTop="17dp"
+        android:id="@+id/dob" />
+
+    <TextView
+        android:text="gender"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/dob"
+        android:layout_alignStart="@+id/dob"
+        android:layout_marginTop="20dp"
+        android:id="@+id/gender" />
+
+    <TextView
+        android:text="height"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/gender"
+        android:layout_alignStart="@+id/gender"
+        android:layout_marginTop="23dp"
+        android:id="@+id/height" />
+
+    <TextView
+        android:text="weight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/height"
+        android:layout_alignStart="@+id/height"
+        android:layout_marginTop="31dp"
+        android:id="@+id/weight" />
 </RelativeLayout>
