--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -43,7 +43,7 @@
                         android:textColor="#000000"
                         android:background="#eeff00"
                         android:layout_gravity="center"
-                        android:onClick="menuClicked" />
+                        android:onClick="extraClicked" />
 
                     <Button
                         android:layout_width="wrap_content"
