--- a/app/src/main/res/layout/activity_repsets.xml
+++ b/app/src/main/res/layout/activity_repsets.xml
@@ -33,7 +33,8 @@
                 android:layout_weight="0.5"
                 android:textColor="#eeff00"
                 android:background="@drawable/yellowborder"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                android:onClick="extraClicked" />
 
             <Button
                 android:layout_width="wrap_content"
@@ -45,7 +46,7 @@
                 android:background="@drawable/yellowborder"
                 android:textColor="#eeff00"
                 android:layout_gravity="center"
-                android:onClick="gotofirstlist" />
+                android:onClick="myProfileClicked" />
 
             <Button
                 android:layout_width="wrap_content"
@@ -56,7 +57,8 @@
                 android:layout_weight="0.25"
                 android:textColor="#000000"
                 android:background="#eeff00"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                android:onClick="myExerciseClicked" />
 
             <Button
                 android:layout_width="wrap_content"
@@ -67,7 +69,8 @@
                 android:layout_weight="0.25"
                 android:textColor="#eeff00"
                 android:background="@drawable/yellowborder"
-                android:layout_gravity="center" />
+                android:layout_gravity="center"
+                android:onClick="trueStrengthClicked" />
         </TableRow>
 
     </TableLayout>
