--- a/app/src/main/res/layout/activity_timer.xml
+++ b/app/src/main/res/layout/activity_timer.xml
@@ -9,7 +9,7 @@
         android:text="30 SECOND REST!"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"
+        android:id="@+id/timerTitle"
         android:textSize="30sp"
         android:textColor="#FFFFFF"
         android:layout_margin="5dp"
